<!--
Licensed Materials - Property of IBM

5747-SM3

(C) Copyright IBM Corp. 1999, 2012 All Rights Reserved.

US Government Users Restricted Rights - Use, duplication or
disclosure restricted by GSA ADP Schedule Contract with
IBM Corp.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/clientIdGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/clientIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:text="@string/clientID" />

        <EditText
            android:id="@+id/clientId"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/serverGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/clientIdGroup" >

        <TextView
            android:id="@+id/serverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:text="@string/server" />

        <AutoCompleteTextView
            android:id="@+id/serverURI"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:hint="@string/serverURIHint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/portGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/serverGroup" >

        <TextView
            android:id="@+id/portTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dip"
            android:text="@string/port" />

        <EditText
            android:id="@+id/port"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:hint="@string/portHint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cleanSessionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/portGroup" >

        <TextView
            android:id="@+id/cleanSessionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dip"
            android:text="@string/cleanSession" />

        <CheckBox
            android:id="@+id/cleanSessionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescriptionCleanSession"
            android:text="@string/empty" />
    </LinearLayout>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/cleanSessionGroup"
        android:text="@string/connect" />

</RelativeLayout>