<!-- 
Licensed Materials - Property of IBM

5747-SM3

(C) Copyright IBM Corp. 1999, 2012 All Rights Reserved.

US Government Users Restricted Rights - Use, duplication or
disclosure restricted by GSA ADP Schedule Contract with
IBM Corp.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topicGroup" >

        <TextView
            android:id="@+id/topictextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dip"
            android:text="@string/topic" />

        <EditText
            android:id="@+id/lastWillTopic"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:layout_width="0dip"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/topicHint" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/messageGroup"
        android:layout_marginTop="16dp"
        android:layout_below="@id/topicGroup" >
        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dip"
            android:text="@string/message"
             />

            <EditText
            android:id="@+id/lastWill"
            android:layout_weight="0.22"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/messageHint" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qosGroup"
        android:layout_marginTop="16dp"
        android:layout_below="@id/messageGroup" >

        <TextView
            android:id="@+id/qosTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:text="@string/qos" />

        <RadioGroup
            android:id="@+id/qosRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >

            <RadioButton
                android:id="@+id/qos0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/qos0"
                 />

            <RadioButton
                android:id="@+id/qos1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qos1" />

            <RadioButton
                android:id="@+id/qos2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qos2" />
        </RadioGroup>

        <TextView
            android:layout_marginStart="25dp"
            android:id="@+id/retainedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/retained" />

        <CheckBox
            android:id="@+id/retained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty" />

    </LinearLayout>

    <Button
        android:id="@+id/publishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qosGroup"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/publish" />

</RelativeLayout>
