<?xml version="1.0" encoding="utf-8"?>
<!-- 
Licensed Materials - Property of IBM

5747-SM3

(C) Copyright IBM Corp. 1999, 2012 All Rights Reserved.

US Government Users Restricted Rights - Use, duplication or
disclosure restricted by GSA ADP Schedule Contract with
IBM Corp.
 -->
<FrameLayout android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <ListView

        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        tools:context=".ClientConnections">

    </ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addConnectionFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:clickable="true"
        android:src="@drawable/ic_add"/>
</FrameLayout>